Implemented process management functionality
For now post manager starts post group 0 process by default and monitors it.
If the post process fails, post-manager will try to restart it 3 times.
Promotion/demotion flow is unchanged and should work as is.

Change-Id: Ia2a5e82133d4d8ed2c5285fb7302293cd6ac385e

--- a/lwraft/config/post.reg.in
+++ b/lwraft/config/post.reg.in
@@ -30,6 +30,14 @@
     default = dword:00000001
     doc = ""
 }
+"PostdPath" = {
+    default = "@LWRAFT_SBIN_DIR@/postd"
+    doc = ""
+}
+"PostdArgs" = {
+    default = "@LWRAFT_SBIN_DIR@/postd -s -l 0 -f @LWRAFT_CONFIG_DIR@/postschema.ldif"
+    doc = ""
+}
 
 [HKEY_THIS_MACHINE\Services\post\Parameters]
 "DefaultSchema" = {
