--- a/ui/lightwave-ui/idm/package.json
+++ b/ui/lightwave-ui/idm/package.json
@@ -28,16 +28,17 @@
   },
   "dependencies": {
     "angular": "1.5.8",
-    "angular-bootstrap": "^0.12.2",
-    "angular-cookies": "^1.5.8",
-    "angular-flash-alert": "^2.4.0",
-    "angular-loader": "^1.5.8",
-    "angular-mocks": "^1.5.8",
-    "angular-route": "^1.5.8",
-    "html5-boilerplate": "^5.3.0",
-    "jquery": "^3.0.0",
-    "moment": "^2.12.0",
-    "ng-dialog": "^0.6.6",
-    "ng-file-upload": "^12.2.13"
+    "angular-bootstrap": "latest",
+    "angular-cookies": "1.5.8",
+    "angular-flash-alert": "2.4.0",
+    "angular-loader": "1.5.8",
+    "angular-mocks": "1.5.8",
+    "angular-route": "1.5.8",
+    "html5-boilerplate": "5.3.0",
+    "jquery": "3.0.0",
+    "moment": "2.12.0",
+    "ng-dialog": "0.6.6",
+    "ng-file-upload": "12.2.13",
+    "jsrsasign": "5.0.12"
   }
 }
