Added IPC server to post-manager and implemented APIs to start, stop, list processes
Server side IPC server is ported from main POST process. Added IPCs for process manager.

Change-Id: I8eede16de798f22303e816162d5da7e9c3765f82

--- a/lwraft/client/Makefile.am
+++ b/lwraft/client/Makefile.am
@@ -31,7 +31,8 @@ libpostclient_la_SOURCES = \
     vmdirlocalclient.c \
     srp_verifier_cstub.c \
     vmdirraft_cstub.c \
-    vmdirsuperlog_cstub.c
+    vmdirsuperlog_cstub.c \
+    postmgrlocalclient.c
 
 libpostclient_la_LIBADD = \
     @top_builddir@/lwraft/common/libcommon.la \
