Additional metrics to debug high write latency
Jira Id: CNA-4647

Problem:
    - Sometimes write operation in vmdir takes more time (~4 secs)
    - From the logs and wavefront, operation is stuck in the middle
      layer for 4 seconds.

Changes:
    - Added more comprehensive metrics for CURD operations
      in vmdir to find out where the time is spent in middle layer.
    - Below specified are the newly added METRICS_LAYERS
          - METRICS_LAYER_PRE_PLUGINS,
          - METRICS_LAYER_WRITE_QUEUE,
          - METRICS_LAYER_BACKEND_TXN_BEGIN,
          - METRICS_LAYER_BACKEND_TXN_COMMIT,
          - METRICS_LAYER_POST_PLUGINS,

Testing:
    - In a stand alone node, triggered writes and verified new metrics
      are being updated as expected.

Change-Id: I8431061828a042daa7e948fa849b5d9d97354756

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -20,6 +20,7 @@ libmiddle_layer_la_SOURCES = \
     indexplugin.c \
     krb.c \
     lockoutpolicy.c \
+    metrics.c \
     modify.c \
     pagedsearch.c \
     password.c \
