Integrate LMDB 0.9.22 code with LW build system [Not enabled yet]
Added a build flag to enable LMDB 0.9.22 in the future. Made changes to makefiles.

Change-Id: I1ab719fcf1824d6c7a1300ccfa68e9f383442f44

--- a/configure.ac
+++ b/configure.ac
@@ -252,6 +252,27 @@ fi
 AM_CONDITIONAL(REPLICATION_V2, [$REPLICATION_V2])
 
 #--------------------------------------------------------------------
+# MDB 0.9.22 flag
+
+MDB_0_9_22=false
+AC_ARG_ENABLE([mdb_0_9_22],
+    [AC_HELP_STRING([--enable-mdb-0-9-22],
+                    [enable mdb 0.9.22 (default: disabled)])],
+    [
+        if test x"$enableval" = x"yes"
+        then
+            MDB_0_9_22=true
+        fi
+    ])
+
+if $MDB_0_9_22
+then
+AC_DEFINE_UNQUOTED(MDB_0_9_22, 1, [ enable mdb 0.9.22 ])
+fi
+
+AM_CONDITIONAL(MDB_0_9_22, [$MDB_0_9_22])
+
+#--------------------------------------------------------------------
 # client only build
 
 ENABLE_SERVER=true
@@ -1855,6 +1876,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/thirdparty/openldap/Makefile
                  vmdir/thirdparty/openldap/libraries/Makefile
                  vmdir/thirdparty/openldap/libraries/mdb/Makefile
+                 vmdir/thirdparty/openldap/libraries/liblmdb/Makefile
                  vmdir/thirdparty/heimdal/Makefile
                  vmdir/thirdparty/heimdal/asn1/Makefile
                  vmdir/thirdparty/heimdal/krb5-crypto/Makefile
