--- a/vmdir/tools/mdb_walflush/Makefile.am
+++ b/vmdir/tools/mdb_walflush/Makefile.am
@@ -1,5 +1,11 @@
 bin_PROGRAMS = lw_mdb_walflush
 
+if MDB_0_9_22
+    MDB_DIR = liblmdb
+else
+    MDB_DIR = mdb
+endif
+
 lw_mdb_walflush_SOURCES = \
     main.c
 
@@ -7,7 +13,7 @@ lw_mdb_walflush_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
     -I$(top_srcdir)/vmdir/include/public \
     -I$(top_srcdir)/vmdir/server/include \
-    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/mdb \
+    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR) \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
@@ -31,5 +37,5 @@ lw_mdb_walflush_LDADD = \
 
 lw_mdb_walflush_LDFLAGS = \
     -static \
-    $(top_builddir)/vmdir/thirdparty/openldap/libraries/mdb/libvmdirmdb.la \
+    $(top_builddir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR)/libvmdirmdb.la \
     @LW_LDFLAGS@
