--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -11,6 +11,12 @@
 
 noinst_LTLIBRARIES = libmdb-store.la
 
+if MDB_0_9_22
+    MDB_DIR = liblmdb
+else
+    MDB_DIR = mdb
+endif
+
 libmdb_store_la_SOURCES = \
     config.c \
     entry.c \
@@ -32,7 +38,7 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/include \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
-    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/mdb \
+    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR) \
     -I$(top_srcdir)/vmdir/server/include \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
@@ -41,5 +47,5 @@ libmdb_store_la_CPPFLAGS = \
 
 libmdb_store_la_LDFLAGS = \
     -static \
-    $(top_builddir)/vmdir/thirdparty/openldap/libraries/mdb/libvmdirmdb.la \
+    $(top_builddir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR)/libvmdirmdb.la \
     @LW_LDFLAGS@
