Ported Blocking queue from POST
Changes:
    - Ported blocking queue implementation
    - Ported blocking queue unit tests
    - Fixed bugs in blocking queue unit tests

Change-Id: I98f05e47bce43a718a1f4dd800968faeca6b51f5

--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -27,6 +27,7 @@ libcommon_la_SOURCES = \
     opensslclient.c  \
     opensslutil.c \
     parsearguments.c \
+    queue.c \
     regutil.c  \
     rpcmemory.c  \
     securityutil.c \
