--- a/vmdir/unit-tests/common/Makefile.am
+++ b/vmdir/unit-tests/common/Makefile.am
@@ -7,6 +7,7 @@ common_SOURCES = \
     linkedlist.c \
     sortedlinkedlist.c \
     mergesort.c \
+    queue.c \
     main.c
 
 common_CPPFLAGS = \
