Make Post use the same MDB library as vmdir once we upgrade to MDB 0.9.22
- Modified makefiles so that once we switch to 0.9.22 post will use the library from vmdir
- Copied mdb_verify_checksum to vmdir
- Switch compilation order so that vmdir is compiled before post

Change-Id: Ibaf961d05246760bebba3c02fd82ca58e9281ba3

--- a/lwraft/tools/mdb_walflush/Makefile.am
+++ b/lwraft/tools/mdb_walflush/Makefile.am
@@ -1,5 +1,13 @@
 bin_PROGRAMS = mdb_walflush
 
+if MDB_0_9_22
+    MDB_DIR = vmdir/thirdparty/openldap/libraries/liblmdb
+    MDB_LIB = libvmdirmdb.la
+else
+    MDB_DIR = lwraft/thirdparty/openldap/libraries/mdb
+    MDB_LIB = liblwraftmdb.la
+endif
+
 mdb_walflush_SOURCES = \
     main.c
 
@@ -7,7 +15,7 @@ mdb_walflush_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
     -I$(top_srcdir)/lwraft/include/public \
     -I$(top_srcdir)/lwraft/server/include \
-    -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/mdb \
+    -I$(top_srcdir)/$(MDB_DIR) \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
@@ -32,5 +40,5 @@ mdb_walflush_LDADD = \
 
 mdb_walflush_LDFLAGS = \
     -static \
-    $(top_builddir)/lwraft/thirdparty/openldap/libraries/mdb/liblwraftmdb.la \
+    $(top_builddir)/$(MDB_DIR)/$(MDB_LIB) \
     @LW_LDFLAGS@
