Make vmdird postd use shared mdb libraries
MDB shared libraries are created for version 0.9.11 and 0.9.22
with default version 0.9.11 so that the acutal version can be
changed at vmdird/postd deployment time.

Change-Id: I86862bafb53ef403195f49fb61614a07caebface

--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -11,12 +11,6 @@
 
 noinst_LTLIBRARIES = libmdb-store.la
 
-if MDB_0_9_22
-    MDB_DIR = liblmdb
-else
-    MDB_DIR = mdb
-endif
-
 libmdb_store_la_SOURCES = \
     config.c \
     entry.c \
@@ -38,7 +32,7 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/include \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/libldap \
-    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR) \
+    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/mdb \
     -I$(top_srcdir)/vmdir/server/include \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
@@ -47,5 +41,4 @@ libmdb_store_la_CPPFLAGS = \
 
 libmdb_store_la_LDFLAGS = \
     -static \
-    $(top_builddir)/vmdir/thirdparty/openldap/libraries/$(MDB_DIR)/libvmdirmdb.la \
     @LW_LDFLAGS@
