--- a/lwraft/server/mdb-store/Makefile.am
+++ b/lwraft/server/mdb-store/Makefile.am
@@ -11,14 +11,6 @@
 
 noinst_LTLIBRARIES = libmdb-store.la
 
-if MDB_0_9_22
-    MDB_DIR = vmdir/thirdparty/openldap/libraries/liblmdb
-    MDB_LIB = libvmdirmdb.la
-else
-    MDB_DIR = lwraft/thirdparty/openldap/libraries/mdb
-    MDB_LIB = liblwraftmdb.la
-endif
-
 libmdb_store_la_SOURCES = \
     config.c \
     dbstate.c \
@@ -39,7 +31,7 @@ libmdb_store_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/include \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/liblber \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/libldap \
-    -I$(top_srcdir)/$(MDB_DIR) \
+    -I$(top_srcdir)/vmdir/thirdparty/openldap/libraries/mdb \
     -I$(top_srcdir)/lwraft/server/include \
     -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
@@ -47,5 +39,4 @@ libmdb_store_la_CPPFLAGS = \
 
 libmdb_store_la_LDFLAGS = \
     -static \
-    $(top_builddir)/$(MDB_DIR)/$(MDB_LIB) \
     @LW_LDFLAGS@
