--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -74,6 +74,7 @@ libvmdird_la_LIBADD = \
     $(top_builddir)/vmdir/server/ldap-head/libldap-head.la \
     $(top_builddir)/vmdir/server/rest-head/librest-head.la \
     $(top_builddir)/vmdir/server/indexcfg/libindexcfg.la \
+    $(top_builddir)/vmdir/server/dbintegritychk/libdb-integritychk.la \
     $(top_builddir)/vmdir/server/middle-layer/libmiddle-layer.la \
     $(top_builddir)/vmdir/server/schema/libschema.la \
     $(top_builddir)/vmdir/server/acl/libvmacl.la \
