Background job to verify DB integrity
Changes:
    - Implemented a background job to verify integrity of
      the database.

Command:
Start DB Integrity Check:
    - ldapsearch -LLL -o ldif-wrap=no -Y SRP -U xxx -h
      localhost -w xxx -b "cn=dbintegritycheckstatus" -s
      base "objectclass=*" start <all/name of specific DB>
Stop DB Integrity Check:
    - ldapsearch -LLL -o ldif-wrap=no -Y SRP -U xxx -h
      localhost -w xxx -b "cn=dbintegritycheckstatus" -s
      base "objectclass=*" stop
Status DB Integrity Check:
    - ldapsearch -LLL -o ldif-wrap=no -Y SRP -U xxx -h
      localhost -w xxx -b "cn=dbintegritycheckstatus" -s
      one "objectclass=*" vmwServerRunTimeStatus

Testing:
    - Functionality tests - start all, start specific DB, stop
      and status.
    - Tested with DB of size ~200 MB
    - Tested with VMIT good DB of size 186GB without I/O
      (time taken: ~65 mins)
    - Tested with VMIT good DB of size 186GB with I/O
      to verify DB size is not increasing due to scan
      (time taken: ~90 mins)
    - Tested with VMIT bad DB of size 172GB

Change-Id: I110cfb14bee8a4a4708dd69c4a164faab48b83d0

--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -27,6 +27,7 @@ SUBDIRS = \
     ldap-head \
     api \
     rest-head \
+	dbintegritychk \
     middle-layer \
     $(REPLDIR) \
     clusterstate \
