--- a/vmdir/testing/integration_tests/misc/Makefile.am
+++ b/vmdir/testing/integration_tests/misc/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES = libmisctests.la
+vmdirtestlib_LTLIBRARIES = libmisctests.la
 
 libmisctests_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
