Add ppolcy - lockout,recycle,pwdstrength tests
Change-Id: I06310836245d65202b4e3abb996f7154752d0a04

--- a/vmdir/testing/integration_tests/ppolicy/Makefile.am
+++ b/vmdir/testing/integration_tests/ppolicy/Makefile.am
@@ -8,7 +8,10 @@ libppolicytests_la_CPPFLAGS = \
     @LW_INCLUDES@
 
 libppolicytests_la_SOURCES = \
-    main.c
+    main.c \
+    lockout.c \
+    recycle.c \
+    pwdstrength.c
 
 libppolicytests_la_LIBADD = \
     @top_builddir@/vmdir/testing/test_lib/libvmdirtesting.la \
