Add SRP and Simple Bind with result acess to test lib
1. relocate SASL code to allow test lib to access SASL defaults
2. in test lib, add bind function to bind and retrieve result

Change-Id: I6edfe3dabb91be4ccf95290b7c3b28281d02d774

--- a/vmdir/testing/test_lib/Makefile.am
+++ b/vmdir/testing/test_lib/Makefile.am
@@ -2,6 +2,7 @@ noinst_LTLIBRARIES = libvmdirtesting.la
 
 libvmdirtesting_la_SOURCES = \
     assert.c \
+    bind.c \
     connection.c \
     misc.c \
     ldap.c \
