add vmdir integration test runner into hmake test suite
1. install lightwave-test rpm
2. run vmdir integration test suite
3. add second server node in default test setup

Change-Id: Idd808c7eb91c2e0532b4016ada027b33aedeea5a

--- a/support/tests/lightwave/docker-compose.yml
+++ b/support/tests/lightwave/docker-compose.yml
@@ -16,6 +16,22 @@ services:
         - LIGHTWAVE_DOMAIN=${LIGHTWAVE_DOMAIN}
         - LIGHTWAVE_PASS=${LIGHTWAVE_PASS}
     tty: true
+  lightwave-server-n2:
+    build: server
+    hostname: server-n2.${LIGHTWAVE_DOMAIN}
+    command: scripts/promote.sh
+    volumes:
+     - ./server:/scripts
+     - ../../../build/rpmbuild/RPMS:/buildrpms
+    networks:
+     lightwave:
+       aliases:
+         - server-n2.${LIGHTWAVE_DOMAIN}
+    privileged: true
+    environment:
+        - LIGHTWAVE_DOMAIN=${LIGHTWAVE_DOMAIN}
+        - LIGHTWAVE_PASS=${LIGHTWAVE_PASS}
+    tty: true
   lightwave-client:
     build: client
     hostname: client.${LIGHTWAVE_DOMAIN}
