Add REST head test sample to integration test suite
1. acquire admin token into test state.
2. perform REST DESROOT query vis rest head.

Change-Id: I60a2e1550c30bcb0506b3b7fee49710ad5f99cc2

--- a/vmdir/testing/test_runner/Makefile.am
+++ b/vmdir/testing/test_runner/Makefile.am
@@ -2,17 +2,24 @@ vmdirtestbin_PROGRAMS = vmdir_test_runner
 
 vmdir_test_runner_SOURCES = \
     main.c \
-    testinfrastructure.c
+    testinfrastructure.c \
+    restping.c
 
 vmdir_test_runner_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
     -I$(top_srcdir)/vmdir/include/public \
+    -I$(top_srcdir)/vmcommon/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
 vmdir_test_runner_LDADD = \
     $(top_builddir)/vmdir/client/libvmdirclient.la \
     $(top_builddir)/vmdir/common/libcommon.la \
+    $(top_builddir)/vmidentity/ssoclients/common/src/libssocommon.la \
+    $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     ../test_lib/libvmdirtesting.la \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
