--- a/vmdir/testing/test_lib/Makefile.am
+++ b/vmdir/testing/test_lib/Makefile.am
@@ -5,16 +5,23 @@ libvmdirtesting_la_SOURCES = \
     connection.c \
     misc.c \
     ldap.c \
+    oidctoken.c \
     testinfrastructure.c \
     user.c
 
 libvmdirtesting_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
     -I$(top_srcdir)/vmdir/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
+    -I$(top_srcdir)/vmcommon/include/public \
     @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
 libvmdirtesting_la_LIBADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
+    $(top_builddir)/vmidentity/ssoclients/common/src/libssocommon.la \
+    $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
     @top_builddir@/vmdir/common/libcommon.la \
     @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
