add POST cluster deployment and sanity test into hmake
hmake test-post will
1. deploy two nodes post cluster
2. ping (post-cli) against post nodes

Change-Id: I5f757f007aff9e536c526711fb9dc4eafce10660

--- a/support/tests/lightwave/client/Dockerfile
+++ b/support/tests/lightwave/client/Dockerfile
@@ -6,4 +6,4 @@ LABEL vendor="VMware, Inc."
 
 RUN tdnf makecache -q
 RUN tdnf update likewise-open --disablerepo=* --enablerepo=lightwave -qy
-RUN tdnf install net-tools shadow findutils gawk jansson sqlite-devel jq gcc glibc-devel git go-1.9.1 -qy
+RUN tdnf install net-tools shadow findutils gawk jansson sqlite-devel jq gcc glibc-devel git go-1.9.1 netcat -qy
