verify test deployment has two active lightwave nodes
1. correct dependency in test evn docker-compose.yml
2. in server promote.sh
   handle promote two nodes
   verify there are two nodes in cluster
3. in sanity test, add loop to verify token acquiring can pass
4. enable vmdir  WAL and LDAP DB COPY by default

Change-Id: Ic8ed398f594b47a76fd507912f893b989899b259

--- a/support/tests/lightwave/docker-compose.yml
+++ b/support/tests/lightwave/docker-compose.yml
@@ -28,6 +28,8 @@ services:
        aliases:
          - server-n2.${LIGHTWAVE_DOMAIN}
     privileged: true
+    depends_on:
+     - "lightwave-server"
     environment:
         - LIGHTWAVE_DOMAIN=${LIGHTWAVE_DOMAIN}
         - LIGHTWAVE_PASS=${LIGHTWAVE_PASS}
@@ -44,7 +46,7 @@ services:
        aliases:
          - client.${LIGHTWAVE_DOMAIN}
     depends_on:
-     - "lightwave-server"
+     - "lightwave-server-n2"
     environment:
         - LIGHTWAVE_DOMAIN=${LIGHTWAVE_DOMAIN}
         - LIGHTWAVE_PASS=${LIGHTWAVE_PASS}
