add integration_tests search data provision
1. during hmake test deployment:
   * set search related config keys
   * provision search object schema

2. add search object provisioning

Change-Id: Id36237c1d32511e06d662c2d4dfff82136824afc

--- a/vmdir/testing/integration_tests/search/Makefile.am
+++ b/vmdir/testing/integration_tests/search/Makefile.am
@@ -10,7 +10,8 @@ libsearchtests_la_CPPFLAGS = \
 libsearchtests_la_SOURCES = \
     anonymous_search.c \
     main.c \
-    pagedsearch.c
+    pagedsearch.c \
+    provision.c
 
 libsearchtests_la_LIBADD = \
     @top_builddir@/vmdir/testing/test_lib/libvmdirtesting.la \
