add more content to search plan control
Change-Id: I612ff99be1822884fc57bc7801e3dc3c1227e41a

--- a/vmdir/testing/integration_tests/search/Makefile.am
+++ b/vmdir/testing/integration_tests/search/Makefile.am
@@ -9,6 +9,7 @@ libsearchtests_la_CPPFLAGS = \
 
 libsearchtests_la_SOURCES = \
     anonymous_search.c \
+    control.c \
     main.c \
     pagedsearch.c \
     provision.c
