add ci - add ci integration - other changes are to keep logs minimal as there is a limit to log quantity in current ci setup

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,7 +60,7 @@ package: stage $(RPMBUILD_SPECS)/$(PKG_SPEC) | $(RPMBUILD_DIRS)
 	cd $(RPMBUILD_ROOT) && \
 	$(RM) -f $(RPMBUILD_RPMS)/$(ARCH)/*.rpm && \
 	$(RPMBUILD) \
-              -v \
+              --quiet \
               --bb \
               --noclean \
               --define "_topdir $(RPMBUILD_ROOT)" \
