--- a/vmca/java/Makefile.am
+++ b/vmca/java/Makefile.am
@@ -6,4 +6,4 @@ vmcajars_DATA = \
 
 @top_builddir@/vmca/certificate-authority/packages/vmware-vmca-client.jar :
 	@echo "Building Jar : vmware-vmca-client.jar"
-	cd @top_srcdir@/vmca/java && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Dlibs.ant-contrib-home="@abs_top_builddir@/vmca/depends" -DBUILD_NUMBER="0" -Dbuild_dir="@abs_top_builddir@"/vmca -Dfile.encoding="UTF8" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
+	cd @top_srcdir@/vmca/java && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Dlibs.ant-contrib-home="@abs_top_builddir@/vmca/depends" -DBUILD_NUMBER="0" -Dbuild_dir="@abs_top_builddir@"/vmca -Dfile.encoding="UTF8" org.apache.tools.ant.launch.Launcher -f build.xml build
