Add search enhancement automation test
1. chg hmake test to have integer type schema
2. chg hmake test to patch test schema and bounce vmdir
3. add search tests
3.1  chg provision to match test scenario
3.2  add LDAP test and vefification code (match algorithm,num entry
        received, index table)
3.3  add REST test and vefification code (match num entry received)
3.4  define test case in testdefs.h

add test cases for modrdn and multi-value attribute

TEST, run search test cases through hmake test

Change-Id: I5eebefcbfb0bc1d50a801a241ce5107cf6142f63

--- a/vmdir/testing/integration_tests/search/Makefile.am
+++ b/vmdir/testing/integration_tests/search/Makefile.am
@@ -3,16 +3,21 @@ vmdirtestlib_LTLIBRARIES = libsearchtests.la
 libsearchtests_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
     -I$(top_srcdir)/vmdir/include/public \
+    -I$(top_srcdir)/vmcommon/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include \
     @OPENSSL_INCLUDES@ \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@
 
 libsearchtests_la_SOURCES = \
-    anonymous_search.c \
     control.c \
     main.c \
-    pagedsearch.c \
-    provision.c
+    abnormalsearch.c \
+    search.c \
+    searchutil.c \
+    provision.c \
+    restsearch.c
 
 libsearchtests_la_LIBADD = \
     @top_builddir@/vmdir/testing/test_lib/libvmdirtesting.la \
