vmdir search enhancement - iterator algorith and paging
Major changes are:
1. remove existing paging implementation.
2. introduce iterator based search algorithm
2.1 in candidate list building, it will fall back to
    iterator algorithm if the candidate set exceed configurable
    limit, i.e. too expensive.
3. introduce "cn=iteratorprimap,cn=config" to store metadata used
   in iterator based algorithm evaluation. i.e. derive which attribute
   best to iterate on per search request.

TEST:  hmake test includes search test suite (in another diff)

Change-Id: Ib140fbc8366f41ba256c0c5a7f0c7a4e6ce79647

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -15,6 +15,7 @@ libsrvcommon_la_SOURCES = \
     dcconnthr.c           \
     entryencodedecode.c   \
     externaloputil.c      \
+    iterContext.c         \
     krbsrvutil.c          \
     metadata.c            \
     nodeidentity.c        \
