add more common code to vmcommon
1. some string function
2. string list function
3. threading

Change-Id: I03cd500c3dc83592b66057628a3471e60330ed4f

--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -17,11 +17,13 @@ libvmcommon_la_SOURCES = \
     memory.c \
     vmcommonerror.c \
     vmstring.c \
+    vmstringlist.c \
     vmhttpclient.c \
     vmjsonresult.c \
     vmmetrics.c \
     vmnetworkutil.c \
     vmsignature.c \
+    vmthreading.c \
     vmutil.c
 
 libvmcommon_la_LIBADD = \
