--- a/vmcommon/testing/Makefile.am
+++ b/vmcommon/testing/Makefile.am
@@ -13,6 +13,7 @@ vmcommon_test_SOURCES = \
     vmjsonresulttest.c \
     vmjsonresultobjectmaptest.c \
     vmjsonresultfromobjectmaptest.c \
+    vmregconfigtest.c \
     main.c
 
 vmcommon_test_CPPFLAGS = \
